change RBCA model
