# service/api/admin/internal/handler/role/add_role_handler.go
@@ -1,32 +1,0 @@
-// Code scaffolded by goctl. Safe to edit.
-// goctl 1.10.1
-
-package role
-
-import (
-	"net/http"
-
-	"github.com/YaHeii/Polyphonic-Yahei/service/api/admin/internal/logic/role"
-	"github.com/YaHeii/Polyphonic-Yahei/service/api/admin/internal/svc"
-	"github.com/YaHeii/Polyphonic-Yahei/service/api/admin/internal/types"
-	"github.com/zeromicro/go-zero/rest/httpx"
-)
-
-// 创建角色
-func AddRoleHandler(svcCtx *svc.ServiceContext) http.HandlerFunc {
-	return func(w http.ResponseWriter, r *http.Request) {
-		var req types.NewRoleReq
-		if err := httpx.Parse(r, &req); err != nil {
-			httpx.ErrorCtx(r.Context(), w, err)
-			return
-		}
-
-		l := role.NewAddRoleLogic(r.Context(), svcCtx)
-		resp, err := l.AddRole(&req)
-		if err != nil {
-			httpx.ErrorCtx(r.Context(), w, err)
-		} else {
-			httpx.OkJsonCtx(r.Context(), w, resp)
-		}
-	}
-}
