# service/api/admin/internal/logic/role/add_role_logic.go
@@ -1,48 +1,0 @@
-// Code scaffolded by goctl. Safe to edit.
-// goctl 1.10.1
-
-package role
-
-import (
-	"context"
-
-	"github.com/YaHeii/Polyphonic-Yahei/service/api/admin/internal/svc"
-	"github.com/YaHeii/Polyphonic-Yahei/service/api/admin/internal/types"
-	"github.com/YaHeii/Polyphonic-Yahei/service/rpc/blog/client/permissionrpc"
-
-	"github.com/zeromicro/go-zero/core/logx"
-)
-
-type AddRoleLogic struct {
-	logx.Logger
-	ctx    context.Context
-	svcCtx *svc.ServiceContext
-}
-
-// 创建角色
-func NewAddRoleLogic(ctx context.Context, svcCtx *svc.ServiceContext) *AddRoleLogic {
-	return &AddRoleLogic{
-		Logger: logx.WithContext(ctx),
-		ctx:    ctx,
-		svcCtx: svcCtx,
-	}
-}
-
-func (l *AddRoleLogic) AddRole(req *types.NewRoleReq) (resp *types.RoleBackVO, err error) {
-	in := &permissionrpc.AddRoleReq{
-		Id:          req.Id,
-		ParentId:    req.ParentId,
-		RoleKey:     req.RoleKey,
-		RoleLabel:   req.RoleLabel,
-		RoleComment: req.RoleComment,
-		Status:      req.Status,
-		IsDefault:   req.IsDefault,
-	}
-
-	out, err := l.svcCtx.PermissionRpc.AddRole(l.ctx, in)
-	if err != nil {
-		return nil, err
-	}
-
-	return convertRoleTypes(out.Role), nil
-}
