# service/api/admin/internal/logic/role/deletes_role_logic.go
@@ -1,42 +1,0 @@
-// Code scaffolded by goctl. Safe to edit.
-// goctl 1.10.1
-
-package role
-
-import (
-	"context"
-
-	"github.com/YaHeii/Polyphonic-Yahei/service/api/admin/internal/svc"
-	"github.com/YaHeii/Polyphonic-Yahei/service/api/admin/internal/types"
-	"github.com/YaHeii/Polyphonic-Yahei/service/rpc/blog/client/permissionrpc"
-
-	"github.com/zeromicro/go-zero/core/logx"
-)
-
-type DeletesRoleLogic struct {
-	logx.Logger
-	ctx    context.Context
-	svcCtx *svc.ServiceContext
-}
-
-// 删除角色
-func NewDeletesRoleLogic(ctx context.Context, svcCtx *svc.ServiceContext) *DeletesRoleLogic {
-	return &DeletesRoleLogic{
-		Logger: logx.WithContext(ctx),
-		ctx:    ctx,
-		svcCtx: svcCtx,
-	}
-}
-
-func (l *DeletesRoleLogic) DeletesRole(req *types.IdsReq) (resp *types.BatchResp, err error) {
-	in := &permissionrpc.DeletesRoleReq{
-		Ids: req.Ids,
-	}
-
-	out, err := l.svcCtx.PermissionRpc.DeletesRole(l.ctx, in)
-	if err != nil {
-		return nil, err
-	}
-
-	return &types.BatchResp{SuccessCount: out.SuccessCount}, nil
-}
