# service/api/admin/internal/types/role.go
@@ -3,33 +3,10 @@
 
 package types
 
-type NewRoleReq struct {
-	Id          int64  `json:"id,optional"`        // 主键id
-	ParentId    int64  `json:"parent_id,optional"` // 父角色id
-	RoleKey     string `json:"role_key"`           // 角色名
-	RoleLabel   string `json:"role_label"`         // 角色标签
-	RoleComment string `json:"role_comment"`       // 角色备注
-	IsDefault   bool   `json:"is_default"`         // 是否默认角色 0否 1是
-	Status      int64  `json:"status"`             // 状态 0正常 1禁用
-}
-
 type QueryRoleReq struct {
 	PageQuery
-	RoleKey   string `json:"role_key,optional"`   // 角色名
-	RoleLabel string `json:"role_label,optional"` // 角色标签
-	Status    int64  `json:"status,optional"`     // 状态 0正常 1禁用
-}
-
-type RoleBackVO struct {
-	Id          int64  `json:"id,optional"`  // 主键id
-	ParentId    int64  `json:"parent_id"`    // 父角色id
-	RoleKey     string `json:"role_key"`     // 角色名
-	RoleLabel   string `json:"role_label"`   // 角色标签
-	RoleComment string `json:"role_comment"` // 角色备注
-	IsDefault   bool   `json:"is_default"`   // 是否默认角色 0否 1是
-	Status      int64  `json:"status"`       // 状态 0正常 1禁用
-	CreatedAt   int64  `json:"created_at"`   // 创建时间
-	UpdatedAt   int64  `json:"updated_at"`   // 更新时间
+	RoleKey string `json:"role_key,optional"` // 角色枚举名
+	Status  int64  `json:"status,optional"`   // 状态 0正常 1禁用
 }
 
 type RoleResourcesResp struct {
